prevent horizontal scrolling when resizing screen

--- a/frontend/src/components/HomeCard/HomeCard.css
+++ b/frontend/src/components/HomeCard/HomeCard.css
@@ -64,7 +64,7 @@
     height: 400px;
     overflow: hidden;
     /* margin-right: 1200px; */
-    margin-right: 75%;
+    margin-right: 66%;
     background-color: white;
     margin-top: -170px;
 }
@@ -75,7 +75,7 @@
     height: 400px;
     overflow: hidden;
     /* margin-left: 1200px; */
-    margin-left: 75%;
+    margin-left: 66%;
     background-color: white;
     margin-top: -400px;
     margin-bottom: 20px;
@@ -90,7 +90,7 @@
     background-color: white;
     margin-bottom: -230px;
     margin-top: 30px;
-    margin-left: 25%;
+    margin-left: 22%;
 }
 
 .homecard-layout4 {
@@ -100,5 +100,5 @@
     background-color: white;
     margin-bottom: 20px;
     margin-top: -420px;
-    margin-right: 25%;
+    margin-right: 22%;
 }
