--- a/frontend/src/components/SubNav/SubNav.css
+++ b/frontend/src/components/SubNav/SubNav.css
@@ -7,6 +7,8 @@
     background-color: rgb(35, 47, 62);
     height: 38px;
     padding: 0 10%; 
+    max-width: 100vw;
+    overflow-x: hidden;
 }
 
 #text-deals {
